// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
<div
  class="betweenBottomMargin-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-select"
    >
      <span
        class="betweenRightMargin-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="false"
      class="default select"
      id="the-select"
      style="padding-right:calc(16px + 2rem)"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="betweenRightMargin-3 inline iconsPosition"
    >
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="iconCaretDown primary size16"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
<div
  class="betweenBottomMargin-2 stack"
>
  <div
    class="row justifyContentSpaceBetween relative"
  >
    <label
      for="the-select"
    >
      <span
        class="betweenRightMargin-2 inline alignCenter"
      >
        <span
          class="medium boldFont color"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="wrapper"
  >
    <select
      aria-invalid="true"
      class="error select"
      id="the-select"
      style="padding-right:calc(32px + 3rem)"
    >
      <option
        value="value-1"
      >
        text one
      </option>
      <option
        value="value-2"
      >
        text two
      </option>
    </select>
    <div
      class="betweenRightMargin-3 inline iconsPosition"
    >
      <div
        style="transition:opacity 100ms ease-in-out;opacity:1"
      >
        <div
          class="fixLineHeight"
        >
          <i
            aria-label="The value of this input field is invalid."
            class="iconExclamationPointCircle error size16"
          />
        </div>
      </div>
      <div
        class="fixLineHeight"
      >
        <i
          aria-hidden="true"
          class="iconCaretDown error size16"
        />
      </div>
    </div>
  </div>
</div>
`;
